# nameko-keycloak

./: .bumpversion.cfg  .coveragerc  .flake8  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  mypy.ini  pyproject.toml  setup.py  test_requirements.txt  tox.ini
.github/workflows/: build.yml
docs/: .rstcheck.cfg  conf.py  configuration.rst
docs/reference/: index.rst
src/nameko_keycloak/: __init__.py  auth.py  dependencies.py  fakes.py  service.py  types.py
tests/: conftest.py  models.py  test_auth.py  test_service.py
